[package]
name = "scouty"
version = "0.6.0"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Scouty is a command-line interface (CLI) to keep an eye on substrate-based chains and hook things up" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scouty dependencies
dotenv = "0.15"
envy = "0.4"
log = "0.4"
clap = "2.33"
lazy_static = "1.4"
derive_more = "0.99"
async-recursion = "0.3.2"
serde = "1.0.132"
serde_json = "1.0.68"
thiserror = "^1.0.24"
chrono = "0.4"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.2"
base64 = "0.13.0"
# subxt dependencies
subxt = { version = "0.34.0", features = ["substrate-compat", "native"] }
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.3"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
